fix button orientation
fix button orientation

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 						</p>
 					</div>
 					<div class="row container col-xs-12">
-						<button class="btn btn-primary col-xs-2" 
+						<button class="btn btn-primary col-xs-3" 
 								@click="testClick()"
 								:disabled="!answeredOption"
 						>Test</button>
 						<div class="col-xs-1"></div>
-						<button class="btn btn-default col-xs-2 margin-left" 
+						<button class="btn btn-default col-xs-3" 
 								@click="buttonClick()"
 						>Next</button>
 					</div>
