reset result message
reset test result message on selection of new option

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 							  	},
 							  	answerMe(value) {
 							  		this.answeredOption = value;
-							  		console.log('this.selected', this.selected);
+							  		this.testResult = "";
 							  	}
 							  }
 			});
