--- a/index.html
+++ b/index.html
@@ -130,14 +130,16 @@
 
 							  		let testArrayIndex = Math.floor(Math.random() * 8);
 							  		this.testArray = this.aikiKihonHappo[testArrayIndex];
+							  		let aikiArrayWithoutTestElements = this.aikiKihonHappo.slice(0);
+							  		aikiArrayWithoutTestElements.splice(testArrayIndex, 1);
 							  		this.testQuestion = this.testArray[Math.floor(Math.random() * 4)];
 							  		this.testAnswer = this.testArray.filter(qn => qn !== this.testQuestion)[Math.floor(Math.random() * 3)];
 							  		this.testOptions[Math.floor(Math.random() * 3)] = this.testAnswer;
 							  		
 
-							  		while(i<2){
-							  			let optionArrayIndex = Math.floor(Math.random() * 8);
-							  			let option = this.aikiKihonHappo[Math.floor(Math.random() * 8)][Math.floor(Math.random() * 4)];
+							  		while(i<3){
+							  			let optionArrayIndex = Math.floor(Math.random() * 7);
+							  			let option = aikiArrayWithoutTestElements[optionArrayIndex][Math.floor(Math.random() * 4)];
 							  			if(this.testOptions.indexOf(option) === -1 && option != this.testQuestion && optionArrayIndex != testArrayIndex) {
 							  				if(this.testOptions[j]) {
 							  					j++;
