--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
 	<body>
 		<div id="app">
 			<div class="container panel panel-default">
-				<div class="panel-heading">
-					<p>Select the option related to following term:</p>
+				<div class="panel-heading container-fluid">
+					<div class="col-xs-12 row"><p>Select the option related to following term:</p></div>
+					<div class="col-xs-12 row">
+					<div class="col-xs-6 row">
 					<b>{{testQuestion}}</b>
+				    </div>
+				    <div class="col-xs-offset-3 col-xs-3">
+				    	Your Score: {{myScore}}
+				    </div>
+				    </div>
 				</div>
 				<div class="panel-body">
 					<div v-for="options in testOptions">
@@ -40,7 +47,7 @@
 						>Test</button>
 						<div class="col-xs-1"></div>
 						<button class="btn btn-default col-xs-3" 
-								@click="buttonClick()"
+								@click="nextQuestion()"
 						>Next</button>
 					</div>
 					
@@ -61,6 +68,7 @@
 							    testResult:'',
 							    answeredOption: '',
 							    selected: false,
+							    myScore: 0,
 								aikiKihonHappo: [
 											[
 												"Ikkyo, first lesson",
@@ -118,10 +126,10 @@
 
 											]]},
 							  mounted() {
-							  		this.buttonClick();
+							  		this.nextQuestion();
 							  	},
 							  methods: {
-							  	buttonClick() {
+							  	nextQuestion() {
 							  		let i = 0, j=0;
 							  		this.testOptions = [];
 							  		this.answeredOption = '';
@@ -134,7 +142,8 @@
 							  		aikiArrayWithoutTestElements.splice(testArrayIndex, 1);
 							  		this.testQuestion = this.testArray[Math.floor(Math.random() * 4)];
 							  		this.testAnswer = this.testArray.filter(qn => qn !== this.testQuestion)[Math.floor(Math.random() * 3)];
-							  		this.testOptions[Math.floor(Math.random() * 3)] = this.testAnswer;
+							  		this.testAnswerIndex = Math.floor(Math.random() * 3);
+							  		this.testOptions[this.testAnswerIndex] = this.testAnswer;
 							  		
 
 							  		while(i<3){
@@ -154,13 +163,19 @@
 							  	testClick() {
 							  		if(this.answeredOption === this.testAnswer) {
 							  			this.testResult = "Correct answer!"
+							  			this.myScore = this.myScore + 10;
 							  		} else {
 							  			this.testResult = "Wrong answer!"
+							  			this.testOptions[this.testAnswerIndex] = this.testOptions[this.testAnswerIndex] + ' (right)';
+							  			this.myScore = this.myScore - 5;
 							  		}
+							  		this.answeredOption = '';
 							  	},
 							  	answerMe(value) {
-							  		this.answeredOption = value;
-							  		this.testResult = "";
+							  		if(!this.testResult) {
+							  		   this.answeredOption = value;
+							  		   this.testResult = "";
+							  		}
 							  	}
 							  }
 			});
