--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				<div class="panel-heading container-fluid">
 					<div class="col-xs-12 row"><p>Select the option related to following term:</p></div>
 					<div class="col-xs-12 row">
-					<div class="col-xs-6 row">
+					<div class="col-xs-9 row">
 					<b>{{testQuestion}}</b>
 				    </div>
-				    <div class="col-xs-offset-3 col-xs-3">
-				    	Your Score: {{myScore}}
+				    <div class="col-xs-3">
+				    	Score: {{myScore}}
 				    </div>
 				    </div>
 				</div>
