fix text typo hon gyaku

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 											],
 											[
 												"Nikyo, second lesson",
-												"Hong Gyaku",
+												"Hon Gyaku",
 												"Base Reversal",
 												"Set them up"
 
